# liquid-staking-referral-program

./: Anchor.toml  test.sh
programs/marinade-referral/: Cargo.toml
programs/marinade-referral/src/: constant.rs  error.rs  lib.rs  states.rs
programs/marinade-referral/src/instructions/: admin.rs  deposit_sol.rs
programs/marinade-referral/tests/: README.md  test_add_remove_liquidity.rs  test_delayed_unstake.rs  test_deposit_sol_liquid_unstake.rs  test_deposit_stake_account.rs  test_initialize.rs  test_state_initialization.rs
programs/marinade-referral/tests/common/: initialize.rs  integration_test.rs  mod.rs  utils.rs
programs/marinade-referral/tests/integration_test/: test_state_initialization.rs
programs/marinade-referral/tests/src/: integration_test.rs
programs/marinade-referral/tests/src/integration_test/: test_deposit_sol_liquid_unstake.rs
