[package]
name = "marinade-referral"
version = "0.1.0"
description = "Created with Anchor"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "marinade_referral"

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
default = []
anchor-debug = []

[dependencies]
anchor-lang = "0.14.0"
anchor-spl = "0.14.0"
solana-program = "1.7.11"
spl-token = "3.2.0"
marinade-finance = { git = "https://github.com/marinade-finance/liquid-staking-program", features = ["no-entrypoint"] }
marinade-onchain-helper = { git = "https://github.com/marinade-finance/marinade-onchain-helper" }

# kept here even if it generates a warning
# in case this project is moved and/or compiled on its own
[profile.release]
overflow-checks = true

[dev-dependencies]
#marinade-referral = { path = "../../../programs/marinade-referral", features = ["no-entrypoint","anchor-debug"] }
rand = "0.7.3" # to be sync with solana keypairs
solana-sdk = "1.7.11"
solana-program-test = "1.7.11"
spl-associated-token-account = { version = "1.0.3", features = ["no-entrypoint"] }
tokio = { version = "1.5.0", features = ["macros"] }
log = "0.4.14"
env_logger = "0.8.3"
test-env-log = "0.2.7"
solana-vote-program = "1.7.11"
anyhow = "1.0.40"
bincode = "1.3.3"
rand_chacha = "0.2.2"
assert-json-diff = "2.0.1"
serde_json = "1.0.64"
lazy_static = "1.4.0"
futures = "0.3"
